--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <!-- Write your HTML in this file -->
+<!DOCUTYPE html>
+<html lang="en">
+    <head>
+        <a href="https://flatironschool.com">Flatiron School</a>
+    </head>
+    <body>
+
+    </body>
+</html>
